Prevent input form wrapping on small devices.

--- a/gnotty/static/css/gnotty.css
+++ b/gnotty/static/css/gnotty.css
@@ -34,5 +34,5 @@ th {border-top:30px solid #fff !important;}
 }
 
 @media (max-width: 767px) {
-    #input {max-width:50%;}
+    #input {max-width:42%;}
 }
